Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103493

dev branch fails to build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.4.0 Beta1
    • 6.x
    • Build System: CMake
    • None
    • Fedora 36
      Ubuntu 20.04
    • Linux/Wayland, Linux/X11
    • fdd7227c67 (qt/tqtc-qtbase/dev)

    Description

      The current dev branch (commit e70c24cd88bacb1e1edfc6f08d59852954937bfe) fails to build on Fedora 36

      Compiler is gcc 12.1.1

      Configured using:

      ./configure -force-debug-info -release -developer-build -opensource -confirm-license -prefix /home/nico/kde6/usr -nomake examples -nomake tests -skip qtwebengine
       
      FAILED: qtbase/lib/libQt6Core.so.6.4.0 qtbase/src/corelib/Core.version /home/nico/workspace/qt6/qtbase/src/corelib/Core.version 
      cd /home/nico/workspace/qt6/qtbase/src/corelib && /usr/bin/perl /home/nico/workspace/qt6/qtbase/mkspecs/features/data/unix/findclasslist.pl < /home/nico/workspace/qt6/qtbase/src/corelib/Core.version.in > /home/n
      ico/workspace/qt6/qtbase/src/corelib/Core.version && cd /home/nico/workspace/qt6 && /usr/bin/c++ -fPIC -g -DNDEBUG -O3  -Wl,--version-script,/home/nico/workspace/qt6/qtbase/src/corelib/Core.version -Wl,--no-unde
      fined -Wl,-e,qt_core_boilerplate -Wl,--dynamic-list=/home/nico/workspace/qt6/qtbase/src/corelib/QtCore.dynlist -Wl,--enable-new-dtags -shared -Wl,-soname,libQt6Core.so.6 -o qtbase/lib/libQt6Core.so.6.4.0 qtbase/
      src/corelib/CMakeFiles/Core.dir/Core_autogen/mocs_compilation.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qsimd.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qhash.cpp.o qtbase/src/corelib/CMakeFile
      s/Core.dir/compat/removed_api.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/archdetect.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qendian.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qfloat
      16.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qglobal.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qhooks.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qlibraryinfo.cpp.o qtbase/src/corelib
      /CMakeFiles/Core.dir/global/qlogging.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qmalloc.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qnumeric.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/q
      operatingsystemversion.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qrandom.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qabstractfileengine.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qbuffer.cpp.
      o qtbase/src/corelib/CMakeFiles/Core.dir/io/qdataurl.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qdebug.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qdir.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qd
      iriterator.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfile.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfiledevice.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfileinfo.cpp.o qtbase/src/corelib/CMa
      keFiles/Core.dir/io/qfileselector.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfilesystemengine.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfilesystementry.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/i
      o/qfsfileengine.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfsfileengine_iterator.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qiodevice.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qipaddress.cpp.o q
      tbase/src/corelib/CMakeFiles/Core.dir/io/qlockfile.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qloggingcategory.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qloggingregistry.cpp.o qtbase/src/corelib/CMake
      Files/Core.dir/io/qnoncontiguousbytedevice.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qresource.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qresource_iterator.cpp.o qtbase/src/corelib/CMakeFiles/Core.di
      r/io/qsavefile.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qstandardpaths.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qstorageinfo.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qtemporarydir.cpp.o qtba
      se/src/corelib/CMakeFiles/Core.dir/io/qtemporaryfile.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qurl.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qurlidna.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/
      qurlquery.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qurlrecode.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qabstracteventdispatcher.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qabstractnati
      veeventfilter.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qassociativeiterable.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qbasictimer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qcoreapp
      lication.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qcoreevent.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qcoreglobaldata.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qdeadlinetimer.cpp.
      o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qelapsedtimer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qeventloop.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qiterable.cpp.o qtbase/src/corelib
      /CMakeFiles/Core.dir/kernel/qmath.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qmetacontainer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qmetaobject.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/k
      ernel/qmetaobjectbuilder.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qmetatype.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qmimedata.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobject.cp
      p.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobjectcleanuphandler.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qpointer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qproperty.cpp.o qtbase/src
      /corelib/CMakeFiles/Core.dir/kernel/qsequentialiterable.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsharedmemory.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsignalmapper.cpp.o qtbase/src/coreli
      b/CMakeFiles/Core.dir/kernel/qsocketnotifier.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsystemerror.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsystemsemaphore.cpp.o qtbase/src/corelib/CMakeFi
      les/Core.dir/kernel/qtestsupport_core.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qtimer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qtranslator.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kerne
      l/qvariant.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/qfactoryinterface.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/qfactoryloader.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/qpluginload
      er.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/quuid.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcborcommon.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcbordiagnostic.cpp.
      o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcborvalue.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qdatastream.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsonarray.cpp.
      o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsoncbor.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsondocument.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsonobject.cp
      p.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsonparser.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsonvalue.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qjsonwriter.c
      pp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qtextstream.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qxmlstream.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qxmlstreamgr
      ammar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qxmlutils.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qbytearray.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qbytearraylist.cpp.o qtba
      se/src/corelib/CMakeFiles/Core.dir/text/qbytearraymatcher.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qcollator.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qlocale.cpp.o qtbase/src/corelib/CMakeFiles
      /Core.dir/text/qlocale_tools.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstring.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstringbuilder.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstringco
      nverter.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstringlist.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstringtokenizer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qstringview.cpp.o qtbase
      /src/corelib/CMakeFiles/Core.dir/text/qtextboundaryfinder.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qunicodetools.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qvsnprintf.cpp.o qtbase/src/corelib/CMa
      keFiles/Core.dir/thread/qrunnable.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qthread.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qcalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qdateti
      me.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qgregoriancalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qjuliancalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qmilankoviccalendar.cpp
      .o qtbase/src/corelib/CMakeFiles/Core.dir/time/qromancalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qarraydata.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qbitarray.cpp.o qtbase/src/corelib/C
      MakeFiles/Core.dir/tools/qcontiguouscache.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qcryptographichash.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qfreelist.cpp.o qtbase/src/corelib/CMakeFiles/Co
      re.dir/tools/qline.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qmargins.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qmessageauthenticationcode.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qpo
      int.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qrect.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qrefcount.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qringbuffer.cpp.o qtbase/src/corelib/C
      MakeFiles/Core.dir/tools/qshareddata.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qsharedpointer.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qsize.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/
      qversionnumber.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animation/qabstractanimation.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animation/qanimationgroup.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animat
      ion/qparallelanimationgroup.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animation/qpauseanimation.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animation/qpropertyanimation.cpp.o qtbase/src/corelib/CMakeFiles/Co
      re.dir/animation/qsequentialanimationgroup.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/animation/qvariantanimation.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/global/qversiontagging.cpp.o qtbase/src/corelib/CM
      akeFiles/Core.dir/io/qfilesystemengine_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfilesystemiterator_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfsfileengine_unix.cpp.o qtbase/src/corelib/CM
      akeFiles/Core.dir/io/qlockfile_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qcore_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qeventdispatcher_unix.cpp.o qtbase/src/corelib/CMakeFiles/Co
      re.dir/kernel/qtimerinfo_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qthread_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qatomic.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qmut
      ex.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qreadwritelock.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qsemaphore.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qthreadpool.cpp.o qtbase/s
      rc/corelib/CMakeFiles/Core.dir/thread/qthreadstorage.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qwaitcondition_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qexception.cpp.o qtbase/src/coreli
      b/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qfuturewatcher.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/thread/qresultstore.cpp.o qtbase/src/corelib/CMakeFil
      es/Core.dir/tools/qcommandlineoption.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qcommandlineparser.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/tools/qeasingcurve.cpp.o qtbase/src/corelib/CMakeFiles/Core
      .dir/tools/qtimeline.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qlocale_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qcollator_icu.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qlocale_icu.c
      pp.o qtbase/src/corelib/CMakeFiles/Core.dir/text/qregularexpression.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qhijricalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qislamiccivilcalendar.cpp.o 
      qtbase/src/corelib/CMakeFiles/Core.dir/time/qjalalicalendar.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezone.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezoneprivate.cpp.o qtbase/src/corelib
      /CMakeFiles/Core.dir/time/qtimezoneprivate_tz.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezoneprivate_icu.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/time/qdatetimeparser.cpp.o qtbase/src/corelib/CMa
      keFiles/Core.dir/io/qfilesystemwatcher.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfilesystemwatcher_polling.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qfilesystemwatcher_inotify.cpp.o qtbase/src/corel
      ib/CMakeFiles/Core.dir/io/qprocess.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qprocess_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qsettings.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/forkfd_q
      t.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qelapsedtimer_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qstandardpaths_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/io/qstorageinfo_unix.cpp.
      o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qabstractitemmodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qitemselectionmodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qabstrac
      tproxymodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qconcatenatetablesproxymodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qidentityproxymodel.cpp.o qtbase/src/corelib/CMakeFiles/Co
      re.dir/itemmodels/qsortfilterproxymodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qtransposeproxymodel.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/itemmodels/qstringlistmodel.cpp.o qtbase/src/core
      lib/CMakeFiles/Core.dir/plugin/qlibrary.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/qelfparser_p.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/plugin/qlibrary_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core
      .dir/kernel/qeventdispatcher_glib.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsharedmemory_posix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsharedmemory_systemv.cpp.o qtbase/src/corelib/CMakeF
      iles/Core.dir/kernel/qsharedmemory_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsystemsemaphore_posix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qsystemsemaphore_systemv.cpp.o qtbase/src/co
      relib/CMakeFiles/Core.dir/kernel/qsystemsemaphore_unix.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcborstreamreader.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcborstreamwriter.cp
      p.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimedatabase.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimeglobpattern.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimemagicrule.cp
      p.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimemagicrulematcher.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimeprovider.cpp.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimetype.cp
      p.o qtbase/src/corelib/CMakeFiles/Core.dir/mimetypes/qmimetypeparser.cpp.o  -Wl,-rpath,:::::::  -lm  /usr/lib64/libicui18n.so  /usr/lib64/libicuuc.so  /usr/lib64/libicudata.so  /usr/lib64/libzstd.so  -ldl  /usr/
      lib64/libglib-2.0.so  /usr/lib64/libz.so  /usr/lib64/libdouble-conversion.so.3.1.5  /usr/lib64/libb2.so  /usr/lib64/libpcre2-16.so  /usr/lib64/libgthread-2.0.so  /usr/lib64/librt.a && : 
      /usr/bin/ld: qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qmetatype.cpp.o: relocation R_X86_64_PC32 against protected symbol `_ZN13QMetaSequence12MetaSequenceI7QStringE5valueE' can not be used when making a shared object 
      /usr/bin/ld: final link failed: bad value 
      collect2: error: ld returned 1 exit status 
      [14/8898] Building CXX object qtbase/qmake/CMakeFiles/qmake.dir/generators/unix/unixmake2.cpp.o
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            nicolasfella Nicolas Fella
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes