config.tests/direct_extern_access/lib.cpp
@@ -1,0 +1,10 @@
+// Copyright (C) 2022 Intel Corporation.
+// SPDX-License-Identifier: MIT
+
+// This is the test found in https://sourceware.org/bugzilla/show_bug.cgi?id=29087
+
+#define BUILD
+#include "lib.h"
+
+S::~S() { }
+void S::f() { }
